made plugin run from config